parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NEWLINE

Grammar

Rule 0     S' -> begin
Rule 1     begin -> function
Rule 2     function -> function funcname OPENCURL code RETURN expression EOL CLOSECURL
Rule 3     function -> empty
Rule 4     funcname -> datatype FNAME OPENPAR parameters CLOSEPAR
Rule 5     parameters -> vardeclare COMMA parameters
Rule 6     parameters -> vardeclare
Rule 7     parameters -> empty
Rule 8     code -> code vardeclare EOL
Rule 9     code -> code varassign EOL
Rule 10    code -> code io EOL
Rule 11    code -> code expression EOL
Rule 12    code -> code while
Rule 13    code -> code if
Rule 14    code -> empty
Rule 15    io -> inputoutput OPENPAR iodata CLOSEPAR
Rule 16    io -> inputoutput error
Rule 17    inputoutput -> INPUT
Rule 18    inputoutput -> OUTPUT
Rule 19    iodata -> QUOTEMARK percenttype QUOTEMARK COMMA AND NAME
Rule 20    percenttype -> PERCENTFLOAT
Rule 21    percenttype -> PERCENTINT
Rule 22    datatype -> TYPEFLOAT
Rule 23    datatype -> TYPEINT
Rule 24    bool -> expression boolop expression
Rule 25    bool -> bool boolop bool
Rule 26    bool -> expression boolop bool
Rule 27    bool -> bool boolop expression
Rule 28    bool -> NOT bool
Rule 29    bool -> OPENPAR bool CLOSEPAR
Rule 30    boolop -> EQ
Rule 31    boolop -> NEQ
Rule 32    boolop -> LSS
Rule 33    boolop -> GTR
Rule 34    boolop -> LEQ
Rule 35    boolop -> GEQ
Rule 36    boolop -> AND
Rule 37    boolop -> OR
Rule 38    if -> IF OPENPAR bool CLOSEPAR block else
Rule 39    if -> IF OPENPAR bool CLOSEPAR block
Rule 40    else -> ELSE block
Rule 41    while -> WHILE OPENPAR bool CLOSEPAR block
Rule 42    block -> OPENCURL while CLOSECURL
Rule 43    block -> OPENCURL if CLOSECURL
Rule 44    block -> OPENCURL bcode CLOSECURL
Rule 45    bcode -> bcode io EOL
Rule 46    bcode -> bcode expression EOL
Rule 47    bcode -> bcode BREAK EOL
Rule 48    bcode -> empty
Rule 49    expression -> expression oper expression
Rule 50    expression -> OPENPAR expression CLOSEPAR
Rule 51    oper -> EXP
Rule 52    oper -> MULTIPLY
Rule 53    oper -> DIVIDE
Rule 54    oper -> PLUS
Rule 55    oper -> MINUS
Rule 56    oper -> EQUALS
Rule 57    vardeclare -> datatype NAME
Rule 58    varassign -> NAME EQUALS expression
Rule 59    varassign -> NAME EQUALS NAME
Rule 60    expression -> FNAME OPENPAR varname CLOSEPAR
Rule 61    varname -> NAME COMMA varname
Rule 62    varname -> NAME
Rule 63    varname -> empty
Rule 64    expression -> INT
Rule 65    expression -> FLOAT
Rule 66    expression -> NAME
Rule 67    empty -> <empty>

Terminals, with rules where they appear

AND                  : 19 36
BREAK                : 47
CLOSECURL            : 2 42 43 44
CLOSEPAR             : 4 15 29 38 39 41 50 60
COMMA                : 5 19 61
COMMENT              : 
DIVIDE               : 53
ELSE                 : 40
EOL                  : 2 8 9 10 11 45 46 47
EQ                   : 30
EQUALS               : 56 58 59
EXP                  : 51
FLOAT                : 65
FNAME                : 4 60
GEQ                  : 35
GTR                  : 33
IF                   : 38 39
INPUT                : 17
INT                  : 64
LEQ                  : 34
LSS                  : 32
MINUS                : 55
MULTIPLY             : 52
NAME                 : 19 57 58 59 59 61 62 66
NEQ                  : 31
NEWLINE              : 
NOT                  : 28
OPENCURL             : 2 42 43 44
OPENPAR              : 4 15 29 38 39 41 50 60
OR                   : 37
OUTPUT               : 18
PERCENTFLOAT         : 20
PERCENTINT           : 21
PLUS                 : 54
QUOTEMARK            : 19 19
RETURN               : 2
TYPEFLOAT            : 22
TYPEINT              : 23
WHILE                : 41
error                : 16

Nonterminals, with rules where they appear

bcode                : 44 45 46 47
begin                : 0
block                : 38 39 40 41
bool                 : 25 25 26 27 28 29 38 39 41
boolop               : 24 25 26 27
code                 : 2 8 9 10 11 12 13
datatype             : 4 57
else                 : 38
empty                : 3 7 14 48 63
expression           : 2 11 24 24 26 27 46 49 49 50 58
funcname             : 2
function             : 1 2
if                   : 13 43
inputoutput          : 15 16
io                   : 10 45
iodata               : 15
oper                 : 49
parameters           : 4 5
percenttype          : 19
varassign            : 9
vardeclare           : 5 6 8
varname              : 60 61
while                : 12 42

Parsing method: LALR

state 0

    (0) S' -> . begin
    (1) begin -> . function
    (2) function -> . function funcname OPENCURL code RETURN expression EOL CLOSECURL
    (3) function -> . empty
    (67) empty -> .

    TYPEFLOAT       reduce using rule 67 (empty -> .)
    TYPEINT         reduce using rule 67 (empty -> .)
    $end            reduce using rule 67 (empty -> .)

    begin                          shift and go to state 1
    function                       shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> begin .



state 2

    (1) begin -> function .
    (2) function -> function . funcname OPENCURL code RETURN expression EOL CLOSECURL
    (4) funcname -> . datatype FNAME OPENPAR parameters CLOSEPAR
    (22) datatype -> . TYPEFLOAT
    (23) datatype -> . TYPEINT

    $end            reduce using rule 1 (begin -> function .)
    TYPEFLOAT       shift and go to state 6
    TYPEINT         shift and go to state 7

    funcname                       shift and go to state 4
    datatype                       shift and go to state 5

state 3

    (3) function -> empty .

    TYPEFLOAT       reduce using rule 3 (function -> empty .)
    TYPEINT         reduce using rule 3 (function -> empty .)
    $end            reduce using rule 3 (function -> empty .)


state 4

    (2) function -> function funcname . OPENCURL code RETURN expression EOL CLOSECURL

    OPENCURL        shift and go to state 8


state 5

    (4) funcname -> datatype . FNAME OPENPAR parameters CLOSEPAR

    FNAME           shift and go to state 9


state 6

    (22) datatype -> TYPEFLOAT .

    FNAME           reduce using rule 22 (datatype -> TYPEFLOAT .)
    NAME            reduce using rule 22 (datatype -> TYPEFLOAT .)


state 7

    (23) datatype -> TYPEINT .

    FNAME           reduce using rule 23 (datatype -> TYPEINT .)
    NAME            reduce using rule 23 (datatype -> TYPEINT .)


state 8

    (2) function -> function funcname OPENCURL . code RETURN expression EOL CLOSECURL
    (8) code -> . code vardeclare EOL
    (9) code -> . code varassign EOL
    (10) code -> . code io EOL
    (11) code -> . code expression EOL
    (12) code -> . code while
    (13) code -> . code if
    (14) code -> . empty
    (67) empty -> .

    RETURN          reduce using rule 67 (empty -> .)
    NAME            reduce using rule 67 (empty -> .)
    OPENPAR         reduce using rule 67 (empty -> .)
    FNAME           reduce using rule 67 (empty -> .)
    INT             reduce using rule 67 (empty -> .)
    FLOAT           reduce using rule 67 (empty -> .)
    WHILE           reduce using rule 67 (empty -> .)
    IF              reduce using rule 67 (empty -> .)
    TYPEFLOAT       reduce using rule 67 (empty -> .)
    TYPEINT         reduce using rule 67 (empty -> .)
    INPUT           reduce using rule 67 (empty -> .)
    OUTPUT          reduce using rule 67 (empty -> .)

    code                           shift and go to state 10
    empty                          shift and go to state 11

state 9

    (4) funcname -> datatype FNAME . OPENPAR parameters CLOSEPAR

    OPENPAR         shift and go to state 12


state 10

    (2) function -> function funcname OPENCURL code . RETURN expression EOL CLOSECURL
    (8) code -> code . vardeclare EOL
    (9) code -> code . varassign EOL
    (10) code -> code . io EOL
    (11) code -> code . expression EOL
    (12) code -> code . while
    (13) code -> code . if
    (57) vardeclare -> . datatype NAME
    (58) varassign -> . NAME EQUALS expression
    (59) varassign -> . NAME EQUALS NAME
    (15) io -> . inputoutput OPENPAR iodata CLOSEPAR
    (16) io -> . inputoutput error
    (49) expression -> . expression oper expression
    (50) expression -> . OPENPAR expression CLOSEPAR
    (60) expression -> . FNAME OPENPAR varname CLOSEPAR
    (64) expression -> . INT
    (65) expression -> . FLOAT
    (66) expression -> . NAME
    (41) while -> . WHILE OPENPAR bool CLOSEPAR block
    (38) if -> . IF OPENPAR bool CLOSEPAR block else
    (39) if -> . IF OPENPAR bool CLOSEPAR block
    (22) datatype -> . TYPEFLOAT
    (23) datatype -> . TYPEINT
    (17) inputoutput -> . INPUT
    (18) inputoutput -> . OUTPUT

    RETURN          shift and go to state 13
    NAME            shift and go to state 21
    OPENPAR         shift and go to state 23
    FNAME           shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    WHILE           shift and go to state 27
    IF              shift and go to state 28
    TYPEFLOAT       shift and go to state 6
    TYPEINT         shift and go to state 7
    INPUT           shift and go to state 29
    OUTPUT          shift and go to state 30

    expression                     shift and go to state 14
    vardeclare                     shift and go to state 15
    varassign                      shift and go to state 16
    io                             shift and go to state 17
    while                          shift and go to state 18
    if                             shift and go to state 19
    datatype                       shift and go to state 20
    inputoutput                    shift and go to state 22

state 11

    (14) code -> empty .

    RETURN          reduce using rule 14 (code -> empty .)
    NAME            reduce using rule 14 (code -> empty .)
    OPENPAR         reduce using rule 14 (code -> empty .)
    FNAME           reduce using rule 14 (code -> empty .)
    INT             reduce using rule 14 (code -> empty .)
    FLOAT           reduce using rule 14 (code -> empty .)
    WHILE           reduce using rule 14 (code -> empty .)
    IF              reduce using rule 14 (code -> empty .)
    TYPEFLOAT       reduce using rule 14 (code -> empty .)
    TYPEINT         reduce using rule 14 (code -> empty .)
    INPUT           reduce using rule 14 (code -> empty .)
    OUTPUT          reduce using rule 14 (code -> empty .)


state 12

    (4) funcname -> datatype FNAME OPENPAR . parameters CLOSEPAR
    (5) parameters -> . vardeclare COMMA parameters
    (6) parameters -> . vardeclare
    (7) parameters -> . empty
    (57) vardeclare -> . datatype NAME
    (67) empty -> .
    (22) datatype -> . TYPEFLOAT
    (23) datatype -> . TYPEINT

    CLOSEPAR        reduce using rule 67 (empty -> .)
    TYPEFLOAT       shift and go to state 6
    TYPEINT         shift and go to state 7

    datatype                       shift and go to state 20
    parameters                     shift and go to state 31
    vardeclare                     shift and go to state 32
    empty                          shift and go to state 33

state 13

    (2) function -> function funcname OPENCURL code RETURN . expression EOL CLOSECURL
    (49) expression -> . expression oper expression
    (50) expression -> . OPENPAR expression CLOSEPAR
    (60) expression -> . FNAME OPENPAR varname CLOSEPAR
    (64) expression -> . INT
    (65) expression -> . FLOAT
    (66) expression -> . NAME

    OPENPAR         shift and go to state 23
    FNAME           shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    NAME            shift and go to state 35

    expression                     shift and go to state 34

state 14

    (11) code -> code expression . EOL
    (49) expression -> expression . oper expression
    (51) oper -> . EXP
    (52) oper -> . MULTIPLY
    (53) oper -> . DIVIDE
    (54) oper -> . PLUS
    (55) oper -> . MINUS
    (56) oper -> . EQUALS

    EOL             shift and go to state 36
    EXP             shift and go to state 38
    MULTIPLY        shift and go to state 39
    DIVIDE          shift and go to state 40
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    EQUALS          shift and go to state 43

    oper                           shift and go to state 37

state 15

    (8) code -> code vardeclare . EOL

    EOL             shift and go to state 44


state 16

    (9) code -> code varassign . EOL

    EOL             shift and go to state 45


state 17

    (10) code -> code io . EOL

    EOL             shift and go to state 46


state 18

    (12) code -> code while .

    RETURN          reduce using rule 12 (code -> code while .)
    NAME            reduce using rule 12 (code -> code while .)
    OPENPAR         reduce using rule 12 (code -> code while .)
    FNAME           reduce using rule 12 (code -> code while .)
    INT             reduce using rule 12 (code -> code while .)
    FLOAT           reduce using rule 12 (code -> code while .)
    WHILE           reduce using rule 12 (code -> code while .)
    IF              reduce using rule 12 (code -> code while .)
    TYPEFLOAT       reduce using rule 12 (code -> code while .)
    TYPEINT         reduce using rule 12 (code -> code while .)
    INPUT           reduce using rule 12 (code -> code while .)
    OUTPUT          reduce using rule 12 (code -> code while .)


state 19

    (13) code -> code if .

    RETURN          reduce using rule 13 (code -> code if .)
    NAME            reduce using rule 13 (code -> code if .)
    OPENPAR         reduce using rule 13 (code -> code if .)
    FNAME           reduce using rule 13 (code -> code if .)
    INT             reduce using rule 13 (code -> code if .)
    FLOAT           reduce using rule 13 (code -> code if .)
    WHILE           reduce using rule 13 (code -> code if .)
    IF              reduce using rule 13 (code -> code if .)
    TYPEFLOAT       reduce using rule 13 (code -> code if .)
    TYPEINT         reduce using rule 13 (code -> code if .)
    INPUT           reduce using rule 13 (code -> code if .)
    OUTPUT          reduce using rule 13 (code -> code if .)


state 20

    (57) vardeclare -> datatype . NAME

    NAME            shift and go to state 47


state 21

    (58) varassign -> NAME . EQUALS expression
    (59) varassign -> NAME . EQUALS NAME
    (66) expression -> NAME .

  ! shift/reduce conflict for EQUALS resolved as shift
    EQUALS          shift and go to state 48
    EOL             reduce using rule 66 (expression -> NAME .)
    EXP             reduce using rule 66 (expression -> NAME .)
    MULTIPLY        reduce using rule 66 (expression -> NAME .)
    DIVIDE          reduce using rule 66 (expression -> NAME .)
    PLUS            reduce using rule 66 (expression -> NAME .)
    MINUS           reduce using rule 66 (expression -> NAME .)

  ! EQUALS          [ reduce using rule 66 (expression -> NAME .) ]


state 22

    (15) io -> inputoutput . OPENPAR iodata CLOSEPAR
    (16) io -> inputoutput . error

    OPENPAR         shift and go to state 49
    error           shift and go to state 50


state 23

    (50) expression -> OPENPAR . expression CLOSEPAR
    (49) expression -> . expression oper expression
    (50) expression -> . OPENPAR expression CLOSEPAR
    (60) expression -> . FNAME OPENPAR varname CLOSEPAR
    (64) expression -> . INT
    (65) expression -> . FLOAT
    (66) expression -> . NAME

    OPENPAR         shift and go to state 23
    FNAME           shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    NAME            shift and go to state 35

    expression                     shift and go to state 51

state 24

    (60) expression -> FNAME . OPENPAR varname CLOSEPAR

    OPENPAR         shift and go to state 52


state 25

    (64) expression -> INT .

    EOL             reduce using rule 64 (expression -> INT .)
    EXP             reduce using rule 64 (expression -> INT .)
    MULTIPLY        reduce using rule 64 (expression -> INT .)
    DIVIDE          reduce using rule 64 (expression -> INT .)
    PLUS            reduce using rule 64 (expression -> INT .)
    MINUS           reduce using rule 64 (expression -> INT .)
    EQUALS          reduce using rule 64 (expression -> INT .)
    CLOSEPAR        reduce using rule 64 (expression -> INT .)
    EQ              reduce using rule 64 (expression -> INT .)
    NEQ             reduce using rule 64 (expression -> INT .)
    LSS             reduce using rule 64 (expression -> INT .)
    GTR             reduce using rule 64 (expression -> INT .)
    LEQ             reduce using rule 64 (expression -> INT .)
    GEQ             reduce using rule 64 (expression -> INT .)
    AND             reduce using rule 64 (expression -> INT .)
    OR              reduce using rule 64 (expression -> INT .)


state 26

    (65) expression -> FLOAT .

    EOL             reduce using rule 65 (expression -> FLOAT .)
    EXP             reduce using rule 65 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 65 (expression -> FLOAT .)
    DIVIDE          reduce using rule 65 (expression -> FLOAT .)
    PLUS            reduce using rule 65 (expression -> FLOAT .)
    MINUS           reduce using rule 65 (expression -> FLOAT .)
    EQUALS          reduce using rule 65 (expression -> FLOAT .)
    CLOSEPAR        reduce using rule 65 (expression -> FLOAT .)
    EQ              reduce using rule 65 (expression -> FLOAT .)
    NEQ             reduce using rule 65 (expression -> FLOAT .)
    LSS             reduce using rule 65 (expression -> FLOAT .)
    GTR             reduce using rule 65 (expression -> FLOAT .)
    LEQ             reduce using rule 65 (expression -> FLOAT .)
    GEQ             reduce using rule 65 (expression -> FLOAT .)
    AND             reduce using rule 65 (expression -> FLOAT .)
    OR              reduce using rule 65 (expression -> FLOAT .)


state 27

    (41) while -> WHILE . OPENPAR bool CLOSEPAR block

    OPENPAR         shift and go to state 53


state 28

    (38) if -> IF . OPENPAR bool CLOSEPAR block else
    (39) if -> IF . OPENPAR bool CLOSEPAR block

    OPENPAR         shift and go to state 54


state 29

    (17) inputoutput -> INPUT .

    OPENPAR         reduce using rule 17 (inputoutput -> INPUT .)
    error           reduce using rule 17 (inputoutput -> INPUT .)


state 30

    (18) inputoutput -> OUTPUT .

    OPENPAR         reduce using rule 18 (inputoutput -> OUTPUT .)
    error           reduce using rule 18 (inputoutput -> OUTPUT .)


state 31

    (4) funcname -> datatype FNAME OPENPAR parameters . CLOSEPAR

    CLOSEPAR        shift and go to state 55


state 32

    (5) parameters -> vardeclare . COMMA parameters
    (6) parameters -> vardeclare .

    COMMA           shift and go to state 56
    CLOSEPAR        reduce using rule 6 (parameters -> vardeclare .)


state 33

    (7) parameters -> empty .

    CLOSEPAR        reduce using rule 7 (parameters -> empty .)


state 34

    (2) function -> function funcname OPENCURL code RETURN expression . EOL CLOSECURL
    (49) expression -> expression . oper expression
    (51) oper -> . EXP
    (52) oper -> . MULTIPLY
    (53) oper -> . DIVIDE
    (54) oper -> . PLUS
    (55) oper -> . MINUS
    (56) oper -> . EQUALS

    EOL             shift and go to state 57
    EXP             shift and go to state 38
    MULTIPLY        shift and go to state 39
    DIVIDE          shift and go to state 40
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    EQUALS          shift and go to state 43

    oper                           shift and go to state 37

state 35

    (66) expression -> NAME .

    EOL             reduce using rule 66 (expression -> NAME .)
    EXP             reduce using rule 66 (expression -> NAME .)
    MULTIPLY        reduce using rule 66 (expression -> NAME .)
    DIVIDE          reduce using rule 66 (expression -> NAME .)
    PLUS            reduce using rule 66 (expression -> NAME .)
    MINUS           reduce using rule 66 (expression -> NAME .)
    EQUALS          reduce using rule 66 (expression -> NAME .)
    CLOSEPAR        reduce using rule 66 (expression -> NAME .)
    EQ              reduce using rule 66 (expression -> NAME .)
    NEQ             reduce using rule 66 (expression -> NAME .)
    LSS             reduce using rule 66 (expression -> NAME .)
    GTR             reduce using rule 66 (expression -> NAME .)
    LEQ             reduce using rule 66 (expression -> NAME .)
    GEQ             reduce using rule 66 (expression -> NAME .)
    AND             reduce using rule 66 (expression -> NAME .)
    OR              reduce using rule 66 (expression -> NAME .)


state 36

    (11) code -> code expression EOL .

    RETURN          reduce using rule 11 (code -> code expression EOL .)
    NAME            reduce using rule 11 (code -> code expression EOL .)
    OPENPAR         reduce using rule 11 (code -> code expression EOL .)
    FNAME           reduce using rule 11 (code -> code expression EOL .)
    INT             reduce using rule 11 (code -> code expression EOL .)
    FLOAT           reduce using rule 11 (code -> code expression EOL .)
    WHILE           reduce using rule 11 (code -> code expression EOL .)
    IF              reduce using rule 11 (code -> code expression EOL .)
    TYPEFLOAT       reduce using rule 11 (code -> code expression EOL .)
    TYPEINT         reduce using rule 11 (code -> code expression EOL .)
    INPUT           reduce using rule 11 (code -> code expression EOL .)
    OUTPUT          reduce using rule 11 (code -> code expression EOL .)


state 37

    (49) expression -> expression oper . expression
    (49) expression -> . expression oper expression
    (50) expression -> . OPENPAR expression CLOSEPAR
    (60) expression -> . FNAME OPENPAR varname CLOSEPAR
    (64) expression -> . INT
    (65) expression -> . FLOAT
    (66) expression -> . NAME

    OPENPAR         shift and go to state 23
    FNAME           shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    NAME            shift and go to state 35
